--- a/myapp/public/ar/aframe.html
+++ b/myapp/public/ar/aframe.html
@@ -34,12 +34,14 @@ AFRAME.registerComponent('cursor-listener', {
     <a-mixin id="sphere" geometry="primitive: sphere"></a-mixin>
   </a-assets>
   
+  <!-- cursor="maxDistance: 30; fuse: true" -->
   <a-entity position="0 2.2 4">
     <a-entity camera look-controls wasd-controls>
       <a-entity position="0 0 -3"
                 geometry="primitive: ring; radiusInner: 0.2; radiusOuter: 0.3;"
                 material="color: cyan; shader: flat"
-                cursor="maxDistance: 30; fuse: true">
+                cursor="rayOrigin: mouse"
+                >
         <a-animation begin="click" easing="ease-in" attribute="scale"
              fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
         <a-animation begin="fusing" easing="ease-in" attribute="scale"
