--- a/myapp/public/ar/index.html
+++ b/myapp/public/ar/index.html
@@ -3,82 +3,25 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-        <!--<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>-->
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-<script>
-
-AFRAME.registerComponent('cursor-listener', {
-  init: function () {
-    this.el.addEventListener('click', e => {
-      //console.log('I was clicked at: ', e.detail.intersection.point);
-      alert('click');
-    });
-  }
-});
-
-</script>
-
-
     </head>
 
     <body style="margin: 0; overflow: hidden;">
-        <a-scene 
+        <a-scene
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
         >
-
-  <a-assets>
-    <a-mixin id="cube" geometry="primitive: box"></a-mixin>
-    <a-mixin id="cube-hovered" material="color: magenta"></a-mixin>
-    <a-mixin id="cube-selected" material="color: cyan"></a-mixin>
-    <a-mixin id="red" material="color: red"></a-mixin>
-    <a-mixin id="green" material="color: green"></a-mixin>
-    <a-mixin id="blue" material="color: blue"></a-mixin>
-    <a-mixin id="yellow" material="color: yellow"></a-mixin>
-    <a-mixin id="sphere" geometry="primitive: sphere"></a-mixin>
-  </a-assets>
-
-  <a-camera gps-camera rotation-reader>
-    <a-entity position="0 0 -3"
-              geometry="primitive: ring; radiusInner: 0.2; radiusOuter: 0.3;"
-              material="color: cyan; shader: flat"
-              cursor="maxDistance: 30; fuse: true">
-      <a-animation begin="click" easing="ease-in" attribute="scale"
-           fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
-      <a-animation begin="fusing" easing="ease-in" attribute="scale"
-           fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
-    </a-entity>
-  </a-camera>
-
-  <a-entity cursor-listener gps-entity-place="latitude: 52.3887163; longitude: 4.8868887;">
-    <a-entity mixin="cube green">
-      <a-animation begin="click" attribute="rotation" to="0 360 0"
-                   easing="linear" dur="2000" fill="backwards"></a-animation>
-    </a-entity>
-  </a-entity>
-
-
-        <!--
                 <a-image
-                    name="pink1"
                     src="assets/asset.png"
                     look-at="[gps-camera]"
                     scale="1 1 1"
-                    gps-entity-place="latitude: 52.3887163; longitude: 4.8868887;"
-                    onclick="clickListener"
+                    gps-entity-place="latitude: 52.08139634684686; longitude: 4.319095127284528;"
                 ></a-image>
-                <a-image
-                    name="pink2"
-                    src="assets/asset.png"
-                    look-at="[gps-camera]"
-                    scale="1 1 1"
-                    gps-entity-place="latitude: 52.389485; longitude: 4.8878302;"
-                    onclick="clickListener"
-                ></a-image>
-        -->
 
+            <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
