--- a/myapp/public/ar/index.html
+++ b/myapp/public/ar/index.html
@@ -3,13 +3,27 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+        <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+        <!--<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>-->
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+<script>
+
+AFRAME.registerComponent('cursor-listener', {
+  init: function () {
+    this.el.addEventListener('click', e => {
+      //console.log('I was clicked at: ', e.detail.intersection.point);
+      alert('click');
+    });
+  }
+});
+
+</script>
+
+
     </head>
 
     <body style="margin: 0; overflow: hidden;">
-        <a-scene
+        <a-scene 
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
@@ -38,13 +52,34 @@
     </a-entity>
   </a-camera>
 
-  <a-entity cursor-listener gps-entity-place="latitude: 52.3878537; longitude: 4.8832435;">
+  <a-entity cursor-listener gps-entity-place="latitude: 52.3887163; longitude: 4.8868887;">
     <a-entity mixin="cube green">
       <a-animation begin="click" attribute="rotation" to="0 360 0"
                    easing="linear" dur="2000" fill="backwards"></a-animation>
     </a-entity>
   </a-entity>
 
+
+        <!--
+                <a-image
+                    name="pink1"
+                    src="assets/asset.png"
+                    look-at="[gps-camera]"
+                    scale="1 1 1"
+                    gps-entity-place="latitude: 52.3887163; longitude: 4.8868887;"
+                    onclick="clickListener"
+                ></a-image>
+                <a-image
+                    name="pink2"
+                    src="assets/asset.png"
+                    look-at="[gps-camera]"
+                    scale="1 1 1"
+                    gps-entity-place="latitude: 52.389485; longitude: 4.8878302;"
+                    onclick="clickListener"
+                ></a-image>
+        -->
+
         </a-scene>
     </body>
 </html>
+
