updated assignment, add implemenation of JSON serialization example for Unity and 2 endpoints in the node.js index.js for that implementation

--- a/myapp/public/file.html
+++ b/myapp/public/file.html
@@ -7,11 +7,23 @@ body {
   width: 100vw;
 }
 
+input[type=file] {
+    display: none;
+}
+
+label, button {
+  font-size: 100px;
+}
+
+
 </style>
   </head>
   <body>
     <fieldset>
-      <input type="file" name="file" id="file" label="file"/>
+      <label>This is the file
+        <img src="Fabwall-Black.png"/>
+        <input type="file" name="file" id="file" label="file"/>
+      </label>
       <button onclick="upload()">upload</button>↑
       <p class="msg"></p>
     </fieldset>
